Prevent image from stretching on chrome

--- a/css/style.css
+++ b/css/style.css
@@ -153,7 +153,9 @@ header {
 .product img {
   min-width: 70vw;
   max-width: 500px;
+  height: auto !important;
   align-self: center;
+  object-fit: contain;
 }
 
 .product {
